Refactor DoctorService implementation and controller